# jubilant-octo-robot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_shaders.sh
inc/: macros.h  simple_app.h
shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  main.c  simple_app.c  simple_vulkan_app.c
